--- a/package.json
+++ b/package.json
@@ -33,10 +33,7 @@
   },
   "homepage": "https://github.com/APSL/react-native-keyboard-aware-scroll-view#readme",
   "dependencies": {
-    "react-native": ">=0.12.0",
+    "react-native": ">=0.20.0-rc1",
     "react-timer-mixin": "^0.13.3"
-  },
-  "peerDependencies": {
-    "react-native": ">=0.12.0"
   }
 }
