--- a/package.json
+++ b/package.json
@@ -32,8 +32,8 @@
     "url": "https://github.com/APSL/react-native-keyboard-aware-scroll-view/issues"
   },
   "homepage": "https://github.com/APSL/react-native-keyboard-aware-scroll-view#readme",
-  "dependencies": {
-    "react-native": ">=0.20.0-rc1",
+  "peerDependencies": {
+    "react-native": ">=0.20.0",
     "react-timer-mixin": "^0.13.3"
   }
 }
